# Rename_It

./: .gitignore  CMakeLists.txt  README.md  ystem ; if ($) { g++ tasks.cpp -o tasks } ; if ($) { .tasks }
.github/workflows/: release.yml
include/: App.h  Langauges.h  MainFrame.h  fileservice.h  ikona_1.xpm  tasks.h
resources/: resource.rc
resources/.github/workflows/: release.yml
src/: App.cpp  MainFrame.cpp  fileservice.cpp  main.cpp  tasks.cpp
translations/: app_en.qm  app_en.ts  app_ja.qm  app_ja.ts  app_pl.qm  app_pl.ts
ui/: main.qml
